--- a/sass/layouts/_hero.scss
+++ b/sass/layouts/_hero.scss
@@ -22,7 +22,7 @@
         rgba(47, 48, 58, 0.4),
         rgba(47, 48, 58, 0.4)
       ),
-      url(../../images/hero/desktop/hero-2x-desktop.png);
+      url(./../images/hero/desktop/hero-2x-desktop.png);
     background-repeat: no-repeat;
     background-size: cover;
     background-position: center;
@@ -34,7 +34,7 @@
         rgba(47, 48, 58, 0.4),
         rgba(47, 48, 58, 0.4)
       ),
-      url(../../images/hero/mobile/hero-1x-mobile.png);
+      url(./../images/hero/mobile/hero-1x-mobile.png);
     background-repeat: no-repeat;
     background-size: cover;
     background-position: center;
@@ -47,7 +47,7 @@
           rgba(47, 48, 58, 0.4),
           rgba(47, 48, 58, 0.4)
         ),
-        url(../../images/hero/mobile/hero-2x-mobile.png);
+        url(./../images/hero/mobile/hero-2x-mobile.png);
       background-repeat: no-repeat;
       background-size: cover;
       background-position: center;
@@ -60,7 +60,7 @@
         rgba(47, 48, 58, 0.4),
         rgba(47, 48, 58, 0.4)
       ),
-      url(../../images/hero/tablet/hero-1x-tablet.png);
+      url(./../images/hero/tablet/hero-1x-tablet.png);
     background-repeat: no-repeat;
     background-size: cover;
     background-position: center;
@@ -73,7 +73,7 @@
           rgba(47, 48, 58, 0.4),
           rgba(47, 48, 58, 0.4)
         ),
-        url(../../images/hero/tablet/hero-2x-tablet.png);
+        url(./../images/hero/tablet/hero-2x-tablet.png);
       background-repeat: no-repeat;
       background-size: cover;
       background-position: center;
@@ -86,7 +86,7 @@
         rgba(47, 48, 58, 0.4),
         rgba(47, 48, 58, 0.4)
       ),
-      url(../../images/hero/desktop/hero-1x-desktop.png);
+      url(./../images/hero/desktop/hero-1x-desktop.png);
     background-repeat: no-repeat;
     background-size: cover;
     background-position: center;
@@ -99,7 +99,7 @@
           rgba(47, 48, 58, 0.4),
           rgba(47, 48, 58, 0.4)
         ),
-        url(../../images/hero/desktop/hero-2x-desktop.png);
+        url(./../images/hero/desktop/hero-2x-desktop.png);
       background-repeat: no-repeat;
       background-size: cover;
       background-position: center;
