--- a/sass/components/_form.scss
+++ b/sass/components/_form.scss
@@ -15,7 +15,7 @@
 }
 
 .form__input {
-  width: 100%;
+  max-width: 100%;
   height: 40px;
   padding-left: 40px;
   border: 1px solid rgba(33, 33, 33, 0.2);
@@ -49,7 +49,7 @@
 }
 
 textarea {
-  width: 100%;
+  max-width: 100%;
   resize: none;
   border: 1px solid rgba(33, 33, 33, 0.2);
   box-sizing: border-box;
