--- a/sass/layouts/_footer.scss
+++ b/sass/layouts/_footer.scss
@@ -13,8 +13,9 @@
   display: flex;
   align-items: baseline;
   justify-content: space-between;
+  max-width: 1200px;
 
-  @media screen and (min-width: 480px) {
+  @media screen and (min-width: 320px) {
     display: block;
   }
 
@@ -25,13 +26,13 @@
 }
 
 .footer-contacts {
-  @media screen and (min-width: 480px) and (max-width: 1200px) {
+  @media screen and (min-width: 320px) and (max-width: 1200px) {
     text-align: center;
   }
 }
 
 .footer-socials {
-  @media screen and (min-width: 480px) and (max-width: 1200px) {
+  @media screen and (min-width: 320px) and (max-width: 1200px) {
     padding: 0 90px;
     text-align: center;
   }
@@ -56,14 +57,14 @@
   color: var(--pure-white-color);
   margin-bottom: 20px;
 
-  @media screen and (min-width: 480px) and (max-width: 1200px) {
+  @media screen and (min-width: 320px) and (max-width: 1200px) {
     text-align: center;
     margin-top: 60px;
   }
 }
 
 .sign-in {
-  @media screen and (min-width: 480px) and (max-width: 1200px) {
+  @media screen and (min-width: 320px) and (max-width: 1200px) {
     flex-direction: column;
     text-align: center;
     justify-content: center;
@@ -98,7 +99,7 @@
   display: flex;
   align-items: center;
 
-  @media screen and (min-width: 480px) and (max-width: 1200px) {
+  @media screen and (min-width: 320px) and (max-width: 1200px) {
     flex-direction: column;
     text-align: center;
   }
@@ -107,7 +108,8 @@
 .footer__mail {
   padding: 15px;
   margin-right: 10px;
-  width: 360px;
+  // width: 360px;
+  max-width: 360px;
   height: 50px;
   background-color: var(--footer-bg-color);
   border: 1px solid rgba(255, 255, 255, 0.3);
@@ -119,7 +121,7 @@
   line-height: 20px;
   letter-spacing: 0.03em;
 
-  @media screen and (min-width: 480px) and (max-width: 1200px) {
+  @media screen and (min-width: 320px) and (max-width: 1200px) {
     text-align: center;
     margin-bottom: 20px;
   }
