--- a/sass/layouts/_portfolio.scss
+++ b/sass/layouts/_portfolio.scss
@@ -30,6 +30,12 @@
 .portfolio__container {
   display: flex;
   flex-wrap: wrap;
+  max-width: 1200px;
+
+  @media screen and (min-width: 320px) and (max-width: 1200px) {
+    padding-left: 0;
+    padding-right: 0;
+  }
 }
 
 .portfolio-examples-list__item {
