--- a/sass/components/_mobile-menu.scss
+++ b/sass/components/_mobile-menu.scss
@@ -1,6 +1,9 @@
 .mobile-btn {
-  position: absolute;
-  right: 23px;
+  // position: absolute;
+  top: 20px;
+  right: 20px;
+  z-index: 100;
+  
 
   background-color: transparent;
   border: none;
