--- a/css/styles.css
+++ b/css/styles.css
@@ -467,8 +467,9 @@ textarea:focus {
 }
 
 .mobile-btn {
-  position: absolute;
-  right: 23px;
+  top: 20px;
+  right: 20px;
+  z-index: 100;
   background-color: transparent;
   border: none;
   width: 40px;
@@ -647,8 +648,9 @@ textarea:focus {
 @media screen and (max-width: 767.98px) {
   .header__container {
     max-height: 60px;
-    margin-left: 0;
+    margin-left: auto;
     padding: 23px;
+    max-width: 767px;
   }
 }
 
@@ -853,6 +855,12 @@ textarea:focus {
   border-width: 0;
 }
 
+@media screen and (min-width: 320px) and (max-width: 1200px) {
+  .hero__button {
+    margin-top: 40px;
+  }
+}
+
 .hero__text {
   font-weight: 900;
   font-size: 44px;
@@ -864,6 +872,12 @@ textarea:focus {
   max-width: 700px;
   margin: auto;
   margin-bottom: 30px;
+}
+
+@media screen and (max-width: 1198.98px) {
+  .hero__text {
+    max-width: 360px;
+  }
 }
 
 .our-advantages {
@@ -1110,6 +1124,12 @@ textarea:focus {
   margin-right: 10px;
 }
 
+@media screen and (min-width: 320px) and (max-width: 767px) {
+  .portfolio-examples-list {
+    justify-content: center;
+  }
+}
+
 .portfolio-examples-list__description {
   padding: 20px 25px;
 }
@@ -1145,9 +1165,10 @@ textarea:focus {
   box-shadow: 0px 1px 1px rgba(0, 0, 0, 0.12), 0px 4px 4px rgba(0, 0, 0, 0.06), 1px 4px 6px rgba(0, 0, 0, 0.16);
 }
 
-@media screen and (min-width: 480px) {
+@media screen and (min-width: 320px) {
   .portfolio-examples-list__item {
     --grid-item: 1;
+    max-width: 450px;
   }
 }
 
@@ -1208,6 +1229,8 @@ textarea:focus {
   position: absolute;
   top: 0;
   left: 0;
+  width: 100%;
+  height: 100%;
   z-index: -1;
   font-weight: 400;
   font-size: 18px;
