--- a/sass/components/_modal.scss
+++ b/sass/components/_modal.scss
@@ -14,6 +14,10 @@
   opacity: 0;
   visibility: hidden;
   pointer-events: none;
+
+  @media screen and (min-width: 320px) and (max-width:767px) {
+  //  max-width: 320px;
+  }
 }
 
 .backdrop.is-hidden .modal {
