--- a/sass/layouts/_header.scss
+++ b/sass/layouts/_header.scss
@@ -15,11 +15,13 @@
   align-items: center;
   margin-left: auto;
   max-height: 80px;
+  
 
   @media screen and (max-width: 767.98px) {
     max-height: 60px;
-    margin-left: 0;
+    margin-left: auto;
     padding: 23px;
+    max-width: 767px;
   }
 }
 
