--- a/sass/layouts/_hero.scss
+++ b/sass/layouts/_hero.scss
@@ -124,6 +124,10 @@
   box-shadow: 0px 4px 4px rgba(0, 0, 0, 0.15);
   border-radius: 4px;
   border-width: 0;
+
+  @media screen and (min-width: 320px) and (max-width: 1200px) {
+    margin-top: 40px;
+  }
 }
 
 .hero__text {
@@ -138,4 +142,9 @@
   max-width: 700px;
   margin: auto;
   margin-bottom: 30px;
+
+  @media screen and (max-width:1198.98px) {
+    max-width: 360px;
+  }
+
 }
