--- a/sass/layouts/_portfolio.scss
+++ b/sass/layouts/_portfolio.scss
@@ -16,10 +16,15 @@
   margin-right: 10px;
 }
 
+.portfolio-examples-list {
+  @media screen and (min-width: 320px) and (max-width:767px) {
+    justify-content: center;
+  }
+}
+
+
 .portfolio-examples-list__description {
   padding: 20px 25px;
-  // border: 1px solid var(--portfolio-img-border-color);
-  // border-top: none;
 }
 
 .portfolio-buttons-list {
@@ -52,8 +57,9 @@
       1px 4px 6px rgba(0, 0, 0, 0.16);
   }
 
-  @media screen and (min-width: 480px) {
+  @media screen and (min-width: 320px) {
     --grid-item: 1;
+    max-width: 450px;
   }
 
   @media screen and (min-width: 768px) {
@@ -113,6 +119,9 @@
   position: absolute;
   top: 0;
   left: 0;
+  // max-width: 360px;
+  width: 100%;
+  height: 100%;
 
   z-index: -1;
   font-weight: 400;
