--- a/css/styles.css
+++ b/css/styles.css
@@ -986,7 +986,7 @@ textarea:focus {
   margin-bottom: 0;
   bottom: 0;
   height: 70px;
-  max-width: 100%;
+  width: 100%;
   padding: 25px 0;
   font-weight: 700;
   font-size: 14px;
