--- a/sass/layouts/_footer.scss
+++ b/sass/layouts/_footer.scss
@@ -55,7 +55,7 @@
   letter-spacing: 0.03em;
   text-transform: uppercase;
   color: var(--pure-white-color);
-  margin-bottom: 20px;
+  margin: 0 auto 20px;
 
   @media screen and (min-width: 320px) and (max-width: 1200px) {
     text-align: center;
@@ -108,7 +108,7 @@
 .footer__mail {
   padding: 15px;
   margin-right: 10px;
-  // width: 360px;
+  min-width: 300px;
   max-width: 360px;
   height: 50px;
   background-color: var(--footer-bg-color);
