--- a/sass/layouts/_portfolio.scss
+++ b/sass/layouts/_portfolio.scss
@@ -6,6 +6,39 @@
   }
 }
 
+.portfolio-examples-list {
+  @media screen and (min-width: 320px) and (max-width: 1200px) {
+    justify-content: center;
+  }
+}
+
+.portfolio-examples-list__description {
+  padding: 20px 25px;
+}
+
+.portfolio-buttons-list {
+  display: flex;
+  margin: 0 auto 50px;
+  // margin-bottom: 50px;
+
+  @media screen and (max-width:1200px) {
+    flex-wrap: wrap;
+  }
+
+  @media screen and (max-width:768px) {
+    display: inline-block;
+    justify-content: flex-start;
+    margin-bottom: 40px;
+  }
+}
+
+.portfolio-buttons-list__item {
+
+  // @media screen and (max-width: 768px) {
+  //   flex-wrap: wrap;
+  // }
+}
+
 .portfolio-buttons-list__item:nth-child(-n + 3) {
   @media screen and (max-width: 768px) {
     margin-bottom: 15px;
@@ -14,22 +47,6 @@
 
 .portfolio-buttons-list__item:not(:last-child) {
   margin-right: 10px;
-}
-
-.portfolio-examples-list {
-  @media screen and (min-width: 320px) and (max-width:767px) {
-    justify-content: center;
-  }
-}
-
-
-.portfolio-examples-list__description {
-  padding: 20px 25px;
-}
-
-.portfolio-buttons-list {
-  margin: 0 auto;
-  margin-bottom: 50px;
 }
 
 .portfolio__container {
