--- a/sass/layouts/_portfolio.scss
+++ b/sass/layouts/_portfolio.scss
@@ -1,8 +1,8 @@
 .portfolio-section {
   padding: 94px 0;
 
-  @media screen and (min-width: 480px) and (max-width: 1200px) {
-    padding: 60px 0;
+  @media screen and (min-width: 320px) and (max-width: 1200px) {
+    padding: 60px 15px;
   }
 }
 
@@ -21,22 +21,23 @@
   margin: 0 auto 50px;
   // margin-bottom: 50px;
 
-  @media screen and (max-width:1200px) {
+  @media screen and (max-width: 1200px) {
     flex-wrap: wrap;
   }
 
-  @media screen and (max-width:768px) {
-    display: inline-block;
-    justify-content: flex-start;
+  @media screen and (max-width: 768px) {
+    display: flex;
+    flex-wrap: wrap;
+    // justify-content: flex-start;
     margin-bottom: 40px;
   }
 }
 
 .portfolio-buttons-list__item {
-
-  // @media screen and (max-width: 768px) {
-  //   flex-wrap: wrap;
-  // }
+  @media screen and (max-width: 768px) {
+    // display: flex;
+    flex-wrap: wrap;
+  }
 }
 
 .portfolio-buttons-list__item:nth-child(-n + 3) {
@@ -54,10 +55,13 @@
   flex-wrap: wrap;
   max-width: 1200px;
 
-  @media screen and (min-width: 320px) and (max-width: 1200px) {
-    padding-left: 0;
-    padding-right: 0;
+  @media screen and (max-width: 768px) {
+    max-width: 480px;
   }
+
+  // @media screen and (max-width: 480px) {
+  //   max-width: 480px;
+  // }
 }
 
 .portfolio-examples-list__item {
