--- a/sass/styles.scss
+++ b/sass/styles.scss
@@ -1,5 +1,5 @@
 // First, we include outside code
-// @import "./vendors/.."
+ @import "./vendors/modern-normalize";
 
 // Second, we include additional utils
 @import "./utils/variables";
