--- a/sass/components/_mobile-menu.scss
+++ b/sass/components/_mobile-menu.scss
@@ -1,7 +1,7 @@
 .mobile-btn {
-  // position: absolute;
-  top: 20px;
-  right: 20px;
+  position: fixed;
+  top: 10px;
+  right: 25px;
   z-index: 100;
 
   background-color: transparent;
