--- a/sass/layouts/_hero.scss
+++ b/sass/layouts/_hero.scss
@@ -14,6 +14,8 @@
   background-size: cover;
   background-position: center;
 
+
+
   @media (min-device-pixel-ratio: 2),
     (min-resolution: 192dpi),
     (min-resolution: 2dppx) {
@@ -143,8 +145,14 @@
   margin: auto;
   margin-bottom: 30px;
 
-  @media screen and (max-width:1198.98px) {
+  // @media screen and (max-width:1198.98px) {
+  //   max-width: 360px;
+  // }
+
+  @media screen and (max-width: 1200px) {
     max-width: 360px;
+    font-size: 26px;
+    line-height: 1.62;
   }
 
 }
