--- a/sass/layouts/_hero.scss
+++ b/sass/layouts/_hero.scss
@@ -14,9 +14,9 @@
   background-size: cover;
   background-position: center;
 
-  @media screen and (max-width: 1198.98px) {
-    padding: 200px 0;
-  }
+  // @media screen and (max-width: 1198.98px) {
+  //   padding: 200px 0;
+  // }
 
   @media (min-device-pixel-ratio: 2),
     (min-resolution: 192dpi),
@@ -112,7 +112,7 @@
 }
 
 .hero__container {
-  // padding: 200px 0;
+  padding: 200px 0;
   text-align: center;
 }
 
@@ -146,7 +146,7 @@
   max-width: 700px;
   margin: auto;
   margin-bottom: 30px;
-
+  // padding: 200px 0;
   // @media screen and (max-width:1198.98px) {
   //   max-width: 360px;
   // }
