--- a/sass/components/_mobile-menu.scss
+++ b/sass/components/_mobile-menu.scss
@@ -1,9 +1,10 @@
 .mobile-btn {
-  position: fixed;
-  top: 10px;
-  right: 25px;
-  z-index: 100;
-
+  // position: fixed;
+  // display: inline-flex;
+  // top: 10px;
+  // right: 25px;
+  // z-index: 100;
+  margin: 0;
   background-color: transparent;
   border: none;
   width: 40px;
@@ -147,8 +148,8 @@
 
   font-size: 18px;
   line-height: 22px;
-
   color: var(--accent-color);
+  text-decoration: none;
 }
 
 .mobile-overlay.is-hidden {
