--- a/sass/components/_modal.scss
+++ b/sass/components/_modal.scss
@@ -4,6 +4,7 @@
   height: 100%;
   top: 0;
   left: 0;
+  z-index: 55;
   background-color: var(--modal-bg-color);
   opacity: 1;
   transition: opacity 300ms var(--transition-function),
