--- a/sass/components/_socials-list.scss
+++ b/sass/components/_socials-list.scss
@@ -1,6 +1,8 @@
 .socials-list {
   display: inline-flex;
-  justify-content: center;
+  @media screen and (max-width: 1200px) {
+    justify-content: center;
+  }
 
   &__item:not(:last-child) {
     margin-right: 10px;
