--- a/sass/layouts/_footer.scss
+++ b/sass/layouts/_footer.scss
@@ -55,7 +55,8 @@
   letter-spacing: 0.03em;
   text-transform: uppercase;
   color: var(--pure-white-color);
-  margin: 0 auto 20px;
+  margin-bottom: 20px;
+  text-align: left;
 
   @media screen and (min-width: 320px) and (max-width: 1200px) {
     text-align: center;
