--- a/sass/layouts/_portfolio.scss
+++ b/sass/layouts/_portfolio.scss
@@ -7,9 +7,9 @@
 }
 
 .portfolio-examples-list {
-  @media screen and (min-width: 320px) and (max-width: 1200px) {
-    justify-content: center;
-  }
+  // @media screen and (min-width: 320px) and (max-width: 1200px) {
+  //   justify-content: center;
+  // }
 }
 
 .portfolio-examples-list__description {
